--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.0.7'
 
+    implementation 'br.com.simplepass:loading-button-android:2.1.5'
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
