--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <dist:module dist:instant="true" />
 
     <application
+        android:name=".WashiApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,5 +29,4 @@
         </activity>
         <activity android:name=".BaseActivity" />
     </application>
-
 </manifest>
