--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -36,9 +35,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
+    implementation 'com.mikhaellopez:circularimageview:4.0.2'
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
