--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
 
     implementation 'com.airbnb.android:lottie:3.0.7'
-
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
     implementation 'com.mikhaellopez:circularimageview:4.0.2'
 
