--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+
     defaultConfig {
         applicationId "br.com.washi"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -24,30 +25,44 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation "org.jetbrains.anko:anko:$anko_version"
-    implementation 'androidx.core:core-ktx:1.0.2'
 
     implementation 'com.airbnb.android:lottie:3.0.7'
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
     implementation 'com.mikhaellopez:circularimageview:4.0.2'
+    implementation 'com.shawnlin:number-picker:2.4.8'
+    implementation 'com.michaelmuenzer.android:ScrollableNumberPicker:0.2.2'
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.1.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.core:core-ktx:1.1.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'androidx.preference:preference:1.1.0'
 
+    implementation 'com.google.dagger:dagger-android:2.24'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
